[package]
authors = ["Mikkel Kroman <mk@maero.dk>"]
name = "evic"
version = "0.1.1"
license = "MIT/Apache-2.0"
keywords = ["evic", "firmware"]
homepage = "https://github.com/mkroman/evic"
repository = "https://github.com/mkroman/evic"
description = "Command-line utility for encrypting and decrypting firmware for the eVic-VTC Mini."

[[bin]]
name = "evicutil"

[lib]
name = "evic"

[dependencies]
getopts = "0.2.14"
clippy = { version = "0.0", optional = true }

